# duckdb_faker

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  extension_config.cmake
src/: faker_extension.cpp  quack_extension.cpp
src/include/: faker_extension.hpp
src/table_functions/: numbers.cpp  numbers.hpp
test/: CMakeLists.txt  test_numbers.cpp
